--- a/css/join.css
+++ b/css/join.css
@@ -9,3 +9,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+body{
+  width: 100%;
+  height: 100vh;
+  background: #B5C2CC;
+  font-family: 'KyoboHandwriting2020A';
+}
