--- a/css/login.css
+++ b/css/login.css
@@ -19,75 +19,76 @@ body{
   color: white;
   font-size: 2rem;
   text-align: center;
-  margin-top: 4%;
-}
-
-.container{
-  margin: 0 auto;
   margin-top: 3%;
-  background: #fff;
-  width: 80%;
-  height: 80%;
+}
+.container{
   border: 5px solid gray;
   border-radius: 15px;
-  align-self: center;
-  padding: 5%;
+  background: #fff;
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 3%;
+  height: 80%;
 }
-.container #main_box{
-  display: flex;
-  flex-direction: column;
-}
-.inp #box_id{
-  font-size: 2rem;
-  margin: 2%;
-  height: 100px;
-}
-.inp #box_pw{
-  font-size: 2rem;
-  margin: 2%;
-  height: 100px;
-}
-input{
-  width: 50%;
-  height: 50%;
+.container input{
   border: 3px solid gray;
+  width: 50%;
   border-radius: 15px;
-  font-size: 1.5rem;
-  font-weight: bold;
+  height: 40%;
   padding: 1%;
 }
-input::placeholder{
+.container input::placeholder{
   text-align: center;
+  font-size: 1.5rem;
+  color: lightcoral;
 }
-.inp #box_btn{
-  margin: 2%;
-  height: 100px;
-}
-.inp #lbtn{
-  margin: 2%;
-  width: 100%;
-  height: 70px;
+.container #box_id{
+  margin: 3%;
+  height: 15%;
   font-size: 2rem;
   display: flex;
   align-items: center;
-  justify-content: center;  
-  border: 2px solid gray;
-  border-radius: 15px;
-  margin: 0 auto;
+  justify-content: center; 
 }
-.inp #lbtn:hover{
-  font-weight: bold;
+.container #box_pw{
+  margin: 3%;
+  height: 15%;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+}
+.container #box_btn{
+  margin: 3%;
+  height: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+}
+.container #box_btn #lbtn{
+  border: 3px solid gray;
+  border-radius: 15px;
+  width: 60%;
+  height: 50%;
+  text-align: center;
+  font-size: 2rem; 
+  line-height: 150%;
+}
+.container #box_btn #lbtn:hover{
+  border-color: lightcoral;
   cursor: pointer;
-  border: 5px solid #B5C2CC;
+}
+.container #nbox{
+  height: 5%;
 }
 .container #find_btn{
-  position: relative;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  height: 15%;
   font-size: 2rem;
-  height: 100px;
-  justify-content: center;
 }
 .container #find_btn:hover{
   cursor: pointer;
-  color: #B5C2CC;
+  color: lightcoral;
 }
