--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,7 @@ body{
   height: 40vh;
   text-align: center;
   font-size: 2.5rem;
+  color: white;
 }
 .main_title #P{
   text-align: left;
@@ -56,7 +57,6 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: 0.2s;
 }
 #main_btn #login_btn:hover{
   cursor: pointer;
@@ -73,7 +73,6 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: 0.2s;
 }
 #main_btn #join_btn:hover{
   cursor: pointer;
