--- a/css/index.css
+++ b/css/index.css
@@ -60,7 +60,8 @@ body{
 }
 #main_btn #login_btn:hover{
   cursor: pointer;
-  border: 3px solid black;
+  border: 3px solid lightcoral;
+  color: lightcoral;
 }
 #main_btn #join_btn{
   width: 100%;
@@ -76,7 +77,8 @@ body{
 }
 #main_btn #join_btn:hover{
   cursor: pointer;
-  border: 3px solid black;
+  border: 3px solid lightcoral;
+  color: lightcoral;
 }
 #main_btn #find_btn{
   margin: 2%;
@@ -86,6 +88,6 @@ body{
 }
 #main_btn #find_btn:hover{
   cursor: pointer;
-  color: white;
-  text-decoration: underline;
+  color: lightcoral;
+
 }
