--- a/css/join.css
+++ b/css/join.css
@@ -15,3 +15,127 @@ body{
   background: #B5C2CC;
   font-family: 'KyoboHandwriting2020A';
 }
+#top_title{
+  color: white;
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 3%;
+}
+#top_title:hover{
+  cursor: pointer;
+}
+.container{
+  border: 5px solid gray;
+  border-radius: 15px;
+  background: #fff;
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 3%;
+  height: 80%;
+}
+/* input */
+.container #inp_txt{
+  border: 3px solid gray;
+  width: 40%;
+  height: 15%;
+  border-radius: 15px;
+  height: 40%;
+  padding: 1%;
+  margin: 3%;
+}
+.container input::placeholder{
+  text-align: center;
+  font-size: 1.5rem;
+  color: lightcoral;
+}
+/* 이름 입력*/
+.container #box_name{
+  margin: 1%;
+  height: 15%;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+}
+.container #box_name #name{
+  border: 3px solid gray;
+  border-radius: 15px;
+  padding: 1%;
+  font-size: 1.5rem;
+  height: 50%;
+  margin: 3%;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  visibility: hidden;
+}
+/* 아이디 입력 */
+.container #box_id{
+  margin: 1%;
+  height: 15%;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+}
+.container #box_id #id_re_btn{
+  border: 3px solid gray;
+  border-radius: 15px;
+  padding: 1%;
+  font-size: 1.5rem;
+  height: 50%;
+  margin: 3%;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+}
+.container #box_id #id_re_btn:hover{
+  cursor: pointer;
+}
+/* 비밀번호 입력 */
+.container #box_pw{
+  margin: 1%;
+  height: 15%;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+}
+.container #box_pw #pw_re_btn{
+  border: 3px solid gray;
+  border-radius: 15px;
+  padding: 1%;
+  font-size: 1.5rem;
+  height: 50%;
+  margin: 3%;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  visibility: hidden;
+}
+/* 비밀번호 재입력 */
+.container #box_pw_re{
+  margin: 1%;
+  height: 15%;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+}
+.container #box_pw_re #pw_re_btn{
+  border: 3px solid gray;
+  border-radius: 15px;
+  padding: 1%;
+  font-size: 1.5rem;
+  height: 50%;
+  margin: 3%;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+}
+.container #box_pw_re #pw_re_btn:hover{
+  cursor: pointer;
+}
+/* 연락처 */
+/* 이메일 */
+/* 성별 */
