--- a/css/index.css
+++ b/css/index.css
@@ -14,10 +14,12 @@ body{
   height: 100vh;
   background: #B5C2CC;
   font-family: 'KyoboHandwriting2020A';
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .main_title{
-  margin: 0 auto;
-  margin-top: 5%;
   width: 70%;
   height: 40vh;
   text-align: center;
