--- a/css/login.css
+++ b/css/login.css
@@ -31,13 +31,13 @@ body{
   width: 80%;
   margin: 0 auto;
   margin-top: 3%;
-  height: 80%;
+  height: auto;
 }
 .container input{
   border: 3px solid gray;
   width: 50%;
   border-radius: 15px;
-  height: 40%;
+  height: auto;
   padding: 1%;
 }
 .container input::placeholder{
@@ -47,7 +47,7 @@ body{
 }
 .container #box_id{
   margin: 3%;
-  height: 15%;
+  height: auto;
   font-size: 2rem;
   display: flex;
   align-items: center;
@@ -55,7 +55,7 @@ body{
 }
 .container #box_pw{
   margin: 3%;
-  height: 15%;
+  height: auto;
   font-size: 2rem;
   display: flex;
   align-items: center;
@@ -63,7 +63,7 @@ body{
 }
 .container #box_btn{
   margin: 3%;
-  height: 15%;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center; 
@@ -72,29 +72,21 @@ body{
   border: 3px solid gray;
   border-radius: 15px;
   width: 60%;
-  height: 50%;
+  height: auto;
   text-align: center;
   font-size: 2rem; 
-  line-height: 150%;
 }
 .container #box_btn #lbtn:hover{
   border-color: lightcoral;
   cursor: pointer;
-}
-.container #nbox{
-  height: 5%;
-}
-.container #other_btn{
-  align-items: center;
-  justify-content: center; 
-  height: 15%;
 }
 .container #find_btn{
   display: flex;
   align-items: center;
   justify-content: center; 
   font-size: 2rem;
-  margin: 1%;
+  margin: 3%;
+  height: auto;
 }
 .container #find_btn:hover{
   cursor: pointer;
@@ -105,7 +97,8 @@ body{
   align-items: center;
   justify-content: center; 
   font-size: 2rem;
-  margin: 1%;
+  height: auto;
+  margin: 3%;
 }
 .container #join_btn:hover{
   cursor: pointer;
