--- a/css/login.css
+++ b/css/login.css
@@ -24,6 +24,14 @@ body{
 #top_title:hover{
   cursor: pointer;
 }
+.main{
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .container{
   border: 5px solid gray;
   border-radius: 15px;
