--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,31 @@
   padding: 0;
   box-sizing: border-box;
 }
+body{
+  width: 100%;
+  height: 100vh;
+  background: #B5C2CC;
+  font-family: 'KyoboHandwriting2020A';
+}
+.top{
+  width: 100%;
+  display: flex;
+}
+.top img{
+  width: 50px;
+}
+#top_title{
+  width: 100%;
+  color: white;
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 3%;
+}
+#top_title:hover{
+  cursor: pointer;
+}
+#top_nav img{
+  width: 20%;
+  margin-top: 3%;
+  padding: 3%;
+}
